Wire “Starter Kit” button to Google Drive folder
Replaced the placeholder #join link with the real Drive folder URL so students can access the Starter Kit.
Added target="_blank" and rel="noopener" for security/usability.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
         <div class="card">
           <h4 style="margin-top:0">Starter Kit</h4>
           <p class="muted">Google Drive folder with PDF notes, formula sheet, and a 50‑Q sample bank.</p>
-          <a class="btn" href="#join">Get access</a>
+          <a class="btn" href="https://drive.google.com/drive/folders/1Mn9sh-D0fiUNQDNMIuT5EyscxRsv9zLq?usp=sharing"
+   target="_blank" rel="noopener">Get access</a>
         </div>
         <div class="card">
           <h4 style="margin-top:0">Video Walkthroughs</h4>
