Wire “Video Walkthroughs” button to YouTube playlist

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         <div class="card">
           <h4 style="margin-top:0">Video Walkthroughs</h4>
           <p class="muted">Short YouTube playlist covering high‑yield topics. Closed captions included.</p>
-          <a class="btn secondary" href="#faq">How it works</a>
+          <a class="btn secondary" href="https://youtube.com/playlist?list=PLyZjFOAtgrAiiLMXkkWrDYQLWKATP1kNU&si=xUQ37CWqT2loTW1s"
+   target="_blank" rel="noopener">How it works</a>
         </div>
       </div>
     </section>
