Change CTA: “Join the CSC WhatsApp Channel” and wire channel link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
             <li>You’ll receive the next Zoom invite.</li>
             <li>Optional: book 1‑on‑1 coaching if needed.</li>
           </ol>
-          <p class="muted">Prefer WhatsApp? <a href="#">Tap here</a> to join the study group.</p>
+          <p class="muted">
+  Prefer WhatsApp? <a id="wa-link" href="https://whatsapp.com/channel/0029Vb6I3QQHrDZjnvCGEP3Y"
+  target="_blank" rel="noopener">Join the CSC WhatsApp Channel</a> for study updates.
+</p>
+
         </div>
       </div>
     </section>
