Add WhatsApp icon to header link

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
           <li><a href="#resources">Resources</a></li>
           <li><a href="#sessions">Live Sessions</a></li>
           <li><a href="#faq">FAQ</a></li>
+          <li><a href="https://whatsapp.com/channel/0029Vb6I3QQHrDZjnvCGEP3Y" target="_blank" rel="noopener" aria-label="CSC WhatsApp Channel">
+    <svg class="icon-wa" viewBox="0 0 24 24" aria-hidden="true">
+      <circle cx="12" cy="12" r="11" fill="#25D366"></circle>
+      <!-- simple handset shape -->
+      <path fill="#ffffff"
+        d="M15.5 14.5c-2.1 0-4.1-1-5.9-2.8S6.8 8 6.8 5.9c0-.4.3-.7.7-.7h2.1c.4 0 .7.3.7.7 0 .5.1 1 .2 1.5.1.3 0 .7-.2.9l-1 1c.9 1.8 2.4 3.2 4.2 4.2l1-1c.2-.2.6-.3.9-.2.5.1 1 .2 1.5.2.4 0 .7.3.7.7v2.1c0 .4-.3.7-.7.7z"/>
+    </svg>
+    CSC WhatsApp Channel
+  </a>
+</li>
+
         </ul>
         <a class="btn" href="#join">Join Free</a>
       </nav>
