--- a/index.html
+++ b/index.html
@@ -36,7 +36,27 @@
     input,textarea{width:100%;padding:12px;border-radius:12px;border:1px solid var(--line);background:#0f172a;color:#e2e8f0}
     form .row{display:grid;gap:12px}
     @media (max-width:920px){.hero{grid-template-columns:1fr}.grid.cols-3{grid-template-columns:1fr}.grid.cols-2{grid-template-columns:1fr}}
-  </style>
+  <style>
+/* ===== Signup layout ===== */
+.signup-wrap{max-width:1100px;margin:auto;padding:24px 16px}
+.signup-grid{display:grid;gap:20px;grid-template-columns:minmax(0,1.25fr) minmax(0,1fr)}
+@media (max-width:960px){ .signup-grid{grid-template-columns:1fr} }
+
+.form-frame{background:#0b1226;border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:8px}
+.form-iframe{width:100%;min-height:1300px;border:0;border-radius:10px;display:block}
+@media (min-width:1100px){ .form-iframe{min-height:1200px} }
+
+.sidebar{background:#0f172a;border:1px solid rgba(255,255,255,.08);border-radius:14px;padding:16px;color:#e2e8f0}
+.sidebar h3{margin:0 0 8px}
+.sidebar p,.sidebar li{opacity:.9}
+.badges{display:flex;gap:8px;flex-wrap:wrap;margin-top:10px}
+.badge{background:#0b1226;border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:6px 10px;font-size:.9rem}
+.kpis{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-top:10px}
+.kpis div{background:#0b1226;border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:10px;text-align:center}
+.cta-btn{display:inline-block;margin-top:10px;padding:10px 14px;border-radius:10px;background:#22c55e;color:#0b1020;font-weight:700;text-decoration:none}
+.faq details{background:#0b1226;border:1px solid rgba(255,255,255,.08);border-radius:10px;padding:10px;margin-top:8px}
+.faq summary{cursor:pointer;font-weight:600}
+</style>
 </head>
 <body>
   <header>
@@ -126,43 +146,67 @@
         </ul>
       </div>
     </section>
+    <section class="signup-wrap" id="join">
+  <div class="signup-grid">
 
-    <section id="join">
-      <h2 class="section-title">Join free</h2>
-      <div class="grid cols-2">
-        <div class="card">
-          <!-- Google Form embed -->
-<div class="gform-embed">
-  <iframe
-    src="https://docs.google.com/forms/d/e/1FAIpQLSeR5ul6fXVmu7nZgytThrRttDiFt5Gm4Qok3Wt4x-bYhOlvRQ/viewform?embedded=true"
-    width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">
-    Loading…
-  </iframe>
-</div>
+    <!-- LEFT: Google Form (embed) -->
+    <div class="form-frame">
+      <iframe
+        class="form-iframe"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSeR5ul6fXVmu7nZgytThrRttDiFt5Gm4Qok3Wt4x-bYhOlvRQ/viewform?embedded=true"
+        frameborder="0" marginheight="0" marginwidth="0" loading="lazy">
+      </iframe>
+    </div>
 
-<style>
-  /* keep this small helper here or move to a CSS file later */
-  .gform-embed iframe { width: 100%; border: 0; }
-  @media (max-width: 480px) { .gform-embed iframe { height: 1250px; } }
-</style>
+    <!-- RIGHT: Rich, balanced content -->
+    <aside class="sidebar">
+      <h3>After you sign up</h3>
+      <ol>
+        <li>Instant access to the <strong>Starter Kit</strong> (Drive folder).</li>
+        <li>Invitation to the next <strong>Live Q&amp;A</strong> on Zoom.</li>
+        <li>Optional: join the <strong>study cohort</strong> for accountability.</li>
+      </ol>
 
-          <p class="muted" style="margin-top:10px">No spam. We email only key updates and links.</p>
-        </div>
-        <div class="card">
-          <h4 style="margin-top:0">After you sign up</h4>
-          <ol class="list">
-            <li>We send the Drive folder link instantly.</li>
-            <li>You’ll receive the next Zoom invite.</li>
-            <li>Optional: book 1‑on‑1 coaching if needed.</li>
-          </ol>
-          <p class="muted">
-  Prefer WhatsApp? <a id="wa-link" href="https://whatsapp.com/channel/0029Vb6I3QQHrDZjnvCGEP3Y"
-  target="_blank" rel="noopener">Join the CSC WhatsApp Channel</a> for study updates.
-</p>
-
-        </div>
+      <div class="kpis">
+        <div><strong>6-week</strong><br>study plan</div>
+        <div><strong>50-Q</strong><br>sample bank</div>
+        <div><strong>Weekly</strong><br>check-ins</div>
       </div>
-    </section>
+
+      <div class="badges">
+        <span class="badge">Free to start</span>
+        <span class="badge">Beginner-friendly</span>
+        <span class="badge">Mobile ready</span>
+      </div>
+
+      <h3 style="margin-top:14px">Prefer WhatsApp?</h3>
+      <p>Join the channel for reminders and tips.</p>
+      <p>
+        <a class="cta-btn" href="https://whatsapp.com/channel/0029Vb6I3QQHrDZjnvCGEP3Y" target="_blank" rel="noopener">
+          Open WhatsApp Channel
+        </a>
+      </p>
+
+      <div class="faq">
+        <h3 style="margin-top:14px">FAQ</h3>
+        <details><summary>What’s in the Starter Kit?</summary>
+          Concise notes, a formula sheet, topic map, and a 50-question sample bank.
+        </details>
+        <details><summary>When are live sessions?</summary>
+          Usually weekends. We send the schedule after you sign up.
+        </details>
+        <details><summary>Is this really free?</summary>
+          Starter Kit + channel are free. Optional coaching/cohort add-ons are paid.
+        </details>
+      </div>
+
+      <p style="margin-top:12px;opacity:.8">
+        <small>By submitting, you agree to receive study emails. Unsubscribe anytime.</small>
+      </p>
+    </aside>
+
+  </div>
+</section>
 
     <section id="faq">
       <h2 class="section-title">FAQ</h2>
