brand change from tutor to coach

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CSC Exam Tutor | Free Resources & Live Help</title>
+  <title>CSC Coach | Free Resources & Live Help</title>
   <meta name="description" content="Free and low‑cost study resources to help you pass the Canadian Securities Course (CSC) and related exams. Notes, question banks, live Q&A, and coaching." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -249,7 +249,7 @@ h1,h2,h3{letter-spacing:.2px}
     </section>
 
     <footer class="container">
-      <p class="disclaimer">© <span id="y"></span> CSC Exam Tutor. CSC® and related marks are property of their respective owners. This site is for educational purposes only and provides general study support, not financial or legal advice.</p>
+      <p class="disclaimer">© <span id="y"></span> CSC Coach. CSC® and related marks are property of their respective owners. This site is for educational purposes only and provides general study support, not financial or legal advice.</p>
     </footer>
   </main>
 
