--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ h1,h2,h3{letter-spacing:.2px}
   <header>
     <div class="container">
       <nav>
-        <div class="brand">📘 CSC Exam Tutor</div>
+        <div class="brand">📘 CSC Coach</div>
         <ul>
           <li><a href="#syllabus">Syllabus</a></li>
           <li><a href="#resources">Resources</a></li>
